--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -220,6 +220,13 @@ jobs:
           make ci_gha
           ls -al build/
 
+      - name: Update artifacts to GitHub
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{ matrix.job_name }}
+          path: build
+          retention-days: 7
+
       # - name: Deploy built binaries
       #   shell: bash
       #   run: |
