--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        job_name: ['linux', 'linux_386', 'mac_amd64', 'mac_arm64', 'windows', 'other_os', 'go1.19', 'go1.20']
+        job_name: ['linux', 'linux_386', 'go1.19', 'go1.20']
 
         include:
           - job_name: linux
@@ -49,38 +49,38 @@ jobs:
             gotags: cmount
             quicktest: true
 
-          - job_name: mac_amd64
-            os: macos-11
-            go: '1.21'
-            gotags: 'cmount'
-            build_flags: '-include "^darwin/amd64" -cgo'
-            quicktest: true
-            racequicktest: true
-            deploy: true
+          # - job_name: mac_amd64
+          #   os: macos-11
+          #   go: '1.21'
+          #   gotags: 'cmount'
+          #   build_flags: '-include "^darwin/amd64" -cgo'
+          #   quicktest: true
+          #   racequicktest: true
+          #   deploy: true
 
-          - job_name: mac_arm64
-            os: macos-11
-            go: '1.21'
-            gotags: 'cmount'
-            build_flags: '-include "^darwin/arm64" -cgo -macos-arch arm64 -cgo-cflags=-I/usr/local/include -cgo-ldflags=-L/usr/local/lib'
-            deploy: true
+          # - job_name: mac_arm64
+          #   os: macos-11
+          #   go: '1.21'
+          #   gotags: 'cmount'
+          #   build_flags: '-include "^darwin/arm64" -cgo -macos-arch arm64 -cgo-cflags=-I/usr/local/include -cgo-ldflags=-L/usr/local/lib'
+          #   deploy: true
 
-          - job_name: windows
-            os: windows-latest
-            go: '1.21'
-            gotags: cmount
-            cgo: '0'
-            build_flags: '-include "^windows/"'
-            build_args: '-buildmode exe'
-            quicktest: true
-            deploy: true
+          # - job_name: windows
+          #   os: windows-latest
+          #   go: '1.21'
+          #   gotags: cmount
+          #   cgo: '0'
+          #   build_flags: '-include "^windows/"'
+          #   build_args: '-buildmode exe'
+          #   quicktest: true
+          #   deploy: true
 
-          - job_name: other_os
-            os: ubuntu-latest
-            go: '1.21'
-            build_flags: '-exclude "^(windows/|darwin/|linux/)"'
-            compile_all: true
-            deploy: true
+          # - job_name: other_os
+          #   os: ubuntu-latest
+          #   go: '1.21'
+          #   build_flags: '-exclude "^(windows/|darwin/|linux/)"'
+          #   compile_all: true
+          #   deploy: true
 
           - job_name: go1.19
             os: ubuntu-latest
