--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,6 @@ on:
 
 jobs:
   build:
-    # if: inputs.manual || (github.repository == 'rclone/rclone' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name))
     if: inputs.manual || (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     timeout-minutes: 60
     strategy:
@@ -213,21 +212,21 @@ jobs:
           make compile_all
         if: matrix.compile_all
 
-      - name: Build binaries for release
-        shell: bash
-        run: |
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then make release_dep_linux ; fi
-          make ci_gha
-          ls -al build/
-        if: matrix.deploy
+      # - name: Build binaries for release
+      #   shell: bash
+      #   run: |
+      #     if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then make release_dep_linux ; fi
+      #     make ci_gha
+      #     ls -al build/
+      #   if: matrix.deploy
 
-      - name: Update artifacts to GitHub
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-${{ matrix.job_name }}
-          path: build
-          retention-days: 1
-        if: matrix.deploy
+      # - name: Upload artifacts to GitHub
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: build-${{ matrix.job_name }}
+      #     path: build
+      #     retention-days: 1
+      #   if: matrix.deploy
 
       # - name: Deploy built binaries
       #   shell: bash
@@ -241,7 +240,6 @@ jobs:
       #   if: env.RCLONE_CONFIG_PASS != '' && matrix.deploy && github.head_ref == '' && github.repository == 'rclone/rclone'
 
   lint:
-    # if: inputs.manual || (github.repository == 'rclone/rclone' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name))
     if: inputs.manual || (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     timeout-minutes: 30
     name: "lint"
