--- a/.github/workflows/build-renku.yml
+++ b/.github/workflows/build-renku.yml
@@ -4,9 +4,9 @@ name: Build rclone for Renku
 on:
   push:
     branches:
-      - '**'
+      - "**"
     tags:
-      - '**'
+      - "**"
   pull_request:
   workflow_dispatch:
     inputs:
@@ -23,12 +23,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        job_name: ['linux']
+        job_name: ["linux"]
 
         include:
           - job_name: linux
             os: ubuntu-latest
-            go: '1.21'
+            go: "1.21"
             gotags: cmount
             build_flags: '-include "linux/amd64|linux/arm64"'
             deploy: true
@@ -167,3 +167,24 @@ jobs:
           path: build
           retention-days: 1
         if: matrix.deploy
+
+  image:
+    if: inputs.manual || (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-linux
+          path: rclone
+
+      - name: Display structure of downloaded files
+        run: ls -R rclone
